Quản lý tạo work, firebase_config đưa ra file riêng

--- a/HelpDesk/staff/templates/manager/Index.html
+++ b/HelpDesk/staff/templates/manager/Index.html
@@ -10,10 +10,12 @@
     Chào quản lý {{ name }}
     <button onclick="ToURL('CreateAccount')">Tạo tài khoản</button>
     <button onclick="ToURL('CreateFAQ')">Tạo FAQ</button>
+    <button id="CreateWorkBtn">Tạo công việc</button>
     <button onclick="ToURL('../../logout')">Đăng xuất</button>
 
     <h3>Danh sách sự cố</h3>
     <div id="problems"></div>
+    <input type="hidden" name="key_problem" id="key_problem" value="">
 
     {% if report %}
         <script>
@@ -35,20 +37,16 @@
     }
     firebase.initializeApp(firebaseConfig)
 
-    
     function ToURL(url) {
         window.location.href = url;
     }
 
-
     var data = firebase.database().ref("problems");
         data.on("value", function(snapshot) {
             info = snapshot.val();
-            console.log(info);
             str = "<table border='1'>";
                 for (x in info) {
-                    console.log(x);
-                    str += "<tr>"
+                    str += "<tr onclick='ChooseProblem(\""+ x +"\")'>"
                         str += "<td>"+ info[x].content +"</td>";
                         str += "<td><img src='"+ info[x].url_image +"' alt='"+ info[x].name_image +"' style='height: 50px;'></td>";
                     str += "</tr>";
@@ -56,5 +54,14 @@
             str += "</table>";
             document.getElementById("problems").innerHTML = str;
         });
+
+        function ChooseProblem(key) {
+            document.getElementById("key_problem").value = key;
+        }
+
+        document.getElementById("CreateWorkBtn").onclick = function() {
+            key = document.getElementById("key_problem").value;
+            window.location.href = "CreateWork/"+ key;
+        }
 </script>
 </html>
