--- a/HelpDesk/staff/templates/technician/Index.html
+++ b/HelpDesk/staff/templates/technician/Index.html
@@ -8,17 +8,86 @@
 <body>
     <h2>Đây là trang chủ</h2>
     <h4>Chào kỹ thuật viên {{ name }}</h4>
-    <button onclick="ToURL('../../logout')">Đăng xuất</button>
-    
-    {% if report %}
-        <script>
-            alert("{{ report }}");
-        </script>
-    {% endif %}
+    <button onclick="ToURL('../../logout')">Đăng xuất</button><br><br>
+
+    <input type="hidden" name="user" id="user" value="{{ user }}">
+    <input type="hidden" name="workKey" id="workKey" value="">
+
+    <h3>Danh sách công việc</h3>
+    <div id="works"></div>
+    <button id="showWorkDetail" disabled>Xem chi tiết công việc</button>
+
+    <h3>Danh sách FAQ</h3>
+    <div id="faqs"></div>
+
 </body>
+<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
 <script>
+    var firebaseConfig = {
+        "apiKey": "AIzaSyC22V25o9VKeIPEAVFBfgvguv_C5dlWzn4",
+        "authDomain": "help-desk-12c4d.firebaseapp.com",
+        "databaseURL": "https://help-desk-12c4d.firebaseio.com",
+        "projectId": "help-desk-12c4d",
+        "storageBucket": "help-desk-12c4d.appspot.com",
+        "messagingSenderId": "137334382999",
+        "appId": "1:137334382999:web:73f716f1b85c76f1c724d2",
+        "measurementId": "G-R11CH76CNH"
+    }
+    firebase.initializeApp(firebaseConfig)
+
+    user = document.getElementById("user").value;
+    var data = firebase.database().ref("works");
+    data.on("value", function(snapshot) {
+        works = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>work_name</th>";
+                str += "<th>deadline</th>";
+                str += "<th>status</th>";
+            str += "</tr>";
+            for(x in works) {
+                if(user == works[x].user_fix) {
+                    str += "<tr onclick='ChooseWork(\""+ x +"\")'>";
+                        str += "<td>"+ works[x].work_name +"</td>";
+                        str += "<td>"+ works[x].deadline +"</td>";
+                        str += "<td>"+ works[x].status +"</td>";
+                    str += "</tr>";
+                }
+            }
+        str += "</table>";
+        document.getElementById("works").innerHTML = str;
+    });
+
+    var data_faq = firebase.database().ref("faqs");
+    data_faq.once("value", function(snapshot) {
+        faqs = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>question</th>";
+                str += "<th>answer</th>";
+            str += "</tr>";
+            for(x in faqs) {
+                str += "<tr>";
+                    str += "<td>"+ faqs[x].question +"</td>";
+                    str += "<td>"+ faqs[x].answer +"</td>";
+                str += "</tr>";
+            }
+        str += "</table>";
+        document.getElementById("faqs").innerHTML = str;
+    });
+
+    function ChooseWork(key) {
+        document.getElementById("workKey").value = key;
+        document.getElementById("showWorkDetail").disabled = false;
+    }
+
     function ToURL(url) {
         window.location.href = url;
+    }
+
+    document.getElementById("showWorkDetail").onclick = function() {
+        key = document.getElementById("workKey").value;
+        window.location.href = "WorkDetail/"+ key;
     }
 </script>
 </html>
