Update and delete work, chuyển work , cập nhật status cho công việc, cập nhật lại giao diện

--- a/HelpDesk/staff/templates/manager/CreateAccount.html
+++ b/HelpDesk/staff/templates/manager/CreateAccount.html
@@ -41,7 +41,10 @@
             alert("Mật khẩu nhập lại phải giống với mật khẩu ở trên");
             return false;
         }
-        return true;
+        if(confirm("Bạn sẽ tạo tài khoản này?")) {
+            return true;
+        }
+        return false;        
     }
     function ToURL(url) {
         window.location.href = url;
