--- a/HelpDesk/staff/templates/technician/Index.html
+++ b/HelpDesk/staff/templates/technician/Index.html
@@ -17,6 +17,9 @@
     <div id="works"></div>
     <button id="showWorkDetail" disabled>Xem chi tiết công việc</button>
 
+    <h3>Danh sách các công việc đã được giải quyết</h3>
+    <div id="solutions"></div>
+
     <h3>Danh sách FAQ</h3>
     <div id="faqs"></div>
 
@@ -36,7 +39,7 @@
     firebase.initializeApp(firebaseConfig)
 
     user = document.getElementById("user").value;
-    var data = firebase.database().ref("works");
+    var data = firebase.database().ref("works").orderByChild("user_fix").equalTo(user);
     data.on("value", function(snapshot) {
         works = snapshot.val();
         str = "<table border='1'>";
@@ -46,16 +49,37 @@
                 str += "<th>status</th>";
             str += "</tr>";
             for(x in works) {
-                if(user == works[x].user_fix) {
-                    str += "<tr onclick='ChooseWork(\""+ x +"\")'>";
-                        str += "<td>"+ works[x].work_name +"</td>";
-                        str += "<td>"+ works[x].deadline +"</td>";
-                        str += "<td>"+ works[x].status +"</td>";
-                    str += "</tr>";
-                }
+                str += "<tr onclick='ChooseWork(\""+ x +"\")'>";
+                    str += "<td>"+ works[x].work_name +"</td>";
+                    str += "<td>"+ works[x].deadline +"</td>";
+                    str += "<td>"+ works[x].status +"</td>";
+                str += "</tr>";
             }
         str += "</table>";
         document.getElementById("works").innerHTML = str;
+    });
+
+    var data_solution = firebase.database().ref("solutions").orderByChild("user_fix").equalTo(user);
+    data_solution.once("value", function(snapshot) {
+        solutions = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>work</th>";
+                str += "<th>content</th>";
+                str += "<th>time_fix</th>";
+            str += "</tr>";
+            for(x in solutions) {
+                str += "<tr>";
+                    firebase.database().ref("works").child(solutions[x].work).once("value", function(snapshot) {
+                        work_name = snapshot.val().work_name;
+                        str += "<td>"+ work_name +"</td>";
+                    });
+                    str += "<td>"+ solutions[x].content +"</td>";
+                    str += "<td>"+ solutions[x].time_fix +"</td>";
+                str += "</tr>";
+            }
+        str += "</table>";
+        document.getElementById("solutions").innerHTML = str;
     });
 
     var data_faq = firebase.database().ref("faqs");
