--- a/HelpDesk/staff/templates/manager/Index.html
+++ b/HelpDesk/staff/templates/manager/Index.html
@@ -12,16 +12,24 @@
     <button onclick="ToURL('CreateFAQ')">Tạo FAQ</button>
     <button onclick="ToURL('../../logout')">Đăng xuất</button>
 
-    <h3>Danh sách sự cố</h3>
-    <div id="problems"></div>
-    <button id="CreateWorkBtn" disabled>Tạo công việc</button>
-    <input type="hidden" name="problem_key" id="problem_key" value="">
+    <h3>Danh sách sự cố đã được giải quyết</h3>
+    <div id="problemsDone"></div>
 
-    {% if report %}
-        <script>
-            alert("{{ report }}");
-        </script>
-    {% endif %}
+    <h3>Danh sách sự cố chưa được giải quyết</h3>
+    <div id="problemsNotDone"></div>
+    <button id="createWorkBtn" disabled>Tạo công việc</button>
+    <button id="passProblemBtn" disabled>Duyệt sự cố</button>
+    <input type="hidden" name="problem_key" id="problem_key" value=""><hr>
+
+    <h3>Danh sách công việc theo sự cố</h3><hr>
+    <div id="works"></div>
+    <button id="updateWorkBtn" disabled>Thay đổi thông tin công việc</button>
+    <button id="deleteWorkBtn" disabled>Xóa công việc</button>
+    <button id="moveWorkBtn" disabled>Chuyển công việc</button>
+    <input type="hidden" name="work_key" id="work_key" value="">
+
+    <h3>Danh sách FAQ</h3><hr>
+    <div id="faqs"></div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
 <script>
@@ -41,28 +49,163 @@
         window.location.href = url;
     }
 
-    var data = firebase.database().ref("problems");
-    data.on("value", function(snapshot) {
+    var data_problems_done = firebase.database().ref("problems").orderByChild("status").equalTo(3);
+    data_problems_done.on("value", function(snapshot) {
         info = snapshot.val();
         str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>content</th>";
+                str += "<th>image</th>";
+                str += "<th>status</th>";
+            str += "</tr>";
             for (x in info) {
-                str += "<tr onclick='ChooseProblem(\""+ x +"\")'>"
+                str += "<tr onclick='ChooseProblem(\""+ x +"\", "+ info[x].status +")'>";
                     str += "<td>"+ info[x].content +"</td>";
                     str += "<td><img src='"+ info[x].image_url +"' alt='"+ info[x].image_name +"' style='height: 50px;'></td>";
+                    str += "<td>"+ info[x].status +"</td>";
                 str += "</tr>";
             }
         str += "</table>";
-        document.getElementById("problems").innerHTML = str;
+        document.getElementById("problemsDone").innerHTML = str;
     });
 
-    function ChooseProblem(key) {
-        document.getElementById("problem_key").value = key;
-        document.getElementById("CreateWorkBtn").disabled = false;
+    var data_problems = firebase.database().ref("problems");
+    data_problems.on("value", function(snapshot) {
+        info = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>content</th>";
+                str += "<th>image</th>";
+                str += "<th>status</th>";
+            str += "</tr>";
+            for (x in info) {
+                if(info[x].status != 3) {
+                    str += "<tr onclick='ChooseProblem(\""+ x +"\", "+ info[x].status +")'>"
+                        str += "<td>"+ info[x].content +"</td>";
+                        str += "<td><img src='"+ info[x].image_url +"' alt='"+ info[x].image_name +"' style='height: 50px;'></td>";
+                        str += "<td>"+ info[x].status +"</td>";
+                    str += "</tr>";
+                }
+            }
+        str += "</table>";
+        document.getElementById("problemsNotDone").innerHTML = str;
+    });
+
+    var data_faq = firebase.database().ref("faqs");
+    data_faq.once("value", function(snapshot) {
+        faqs = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>question</th>";
+                str += "<th>answer</th>";
+            str += "</tr>";
+            for (x in faqs) {
+                str += "<tr>";
+                    str += "<td>"+ faqs[x].question +"</td>";
+                    str += "<td>"+ faqs[x].answer +"</td>";
+                str += "</tr>";
+            }
+        str += "</table>";
+        document.getElementById("faqs").innerHTML = str;
+    });
+
+        // Get user_name for work follow problems
+    dsUser = []
+    data_user = firebase.database().ref("users").once('value', function(snapshot) {
+        users = snapshot.val()
+        for(x in users) {
+            dsUser[x] = users[x].name;
+        }
+    });
+
+    function ChooseProblem(problem_key, status) {
+        document.getElementById("problem_key").value = problem_key;
+
+        // Change works follow problems
+        var data_work = firebase.database().ref("works").orderByChild("problem").equalTo(problem_key);
+        data_work.on("value", function(snapshot) {
+            works = snapshot.val();
+            str = "<table border='1'>";
+                str += "<tr>";
+                    str += "<th>work_name</th>";
+                    str += "<th>user_fix</th>";
+                    str += "<th>deadline</th>";
+                    str += "<th>status</th>";
+                str += "</tr>";
+                for (x in works) {
+                    str += "<tr onclick='ChooseWork(\""+ x +"\", "+ works[x].status +")'>";
+                        str += "<td>"+ works[x].work_name +"</td>";                        
+                        str += "<td>"+ dsUser[works[x].user_fix] +"</td>";
+                        str += "<td>"+ works[x].deadline +"</td>";
+                        str += "<td>"+ works[x].status +"</td>";
+                    str += "</tr>";
+                }
+            str += "</table>";
+            document.getElementById("works").innerHTML = str;
+        });       
+
+        // Test status
+        if(status == 0 || status == 1) {
+            document.getElementById("passProblemBtn").disabled = true;
+            document.getElementById("createWorkBtn").disabled = false;
+        }
+        else if(status == 2) {
+            document.getElementById("passProblemBtn").disabled = false;
+            document.getElementById("createWorkBtn").disabled = true;
+        }
+        else if(status == 3) {
+            document.getElementById("passProblemBtn").disabled = true;
+            document.getElementById("createWorkBtn").disabled = true;
+        }
     }
 
-    document.getElementById("CreateWorkBtn").onclick = function() {
+    document.getElementById("passProblemBtn").onclick = function() {
+        if(confirm("Bạn sẽ duyệt sự cố này?")) {
+            key = document.getElementById("problem_key").value;
+            window.location.href = "PassProblem/"+ key;
+        }
+    }
+
+    document.getElementById("createWorkBtn").onclick = function() {
         key = document.getElementById("problem_key").value;
         window.location.href = "CreateWork/"+ key;
+    }
+
+    function ChooseWork(work_key, status) {
+        if(status == 0) {
+            document.getElementById("updateWorkBtn").disabled = false;
+            document.getElementById("deleteWorkBtn").disabled = false;
+            document.getElementById("moveWorkBtn").disabled = true;
+            document.getElementById("work_key").value = work_key;
+        }
+        else if(status == 2) {
+            document.getElementById("updateWorkBtn").disabled = true;
+            document.getElementById("deleteWorkBtn").disabled = true;
+            document.getElementById("moveWorkBtn").disabled = false;
+            document.getElementById("work_key").value = work_key;
+        }
+        else {
+            document.getElementById("updateWorkBtn").disabled = true;
+            document.getElementById("deleteWorkBtn").disabled = true;
+            document.getElementById("moveWorkBtn").disabled = true;
+        }
+    }
+
+    document.getElementById("updateWorkBtn").onclick = function() {
+        work_key = document.getElementById("work_key").value;
+        window.location.href = "UpdateWork/"+ work_key;
+    }
+
+    document.getElementById("deleteWorkBtn").onclick = function() {
+        if(confirm("Bạn sẽ xóa công việc này?")) {
+            work_key = document.getElementById("work_key").value;
+            window.location.href = "DeleteWork/"+ work_key;
+        }
+    }
+
+    document.getElementById("moveWorkBtn").onclick = function() {
+        work_key = document.getElementById("work_key").value;
+        window.location.href = "UpdateWork/"+ work_key;
     }
 </script>
 </html>
