--- a/HelpDesk/staff/templates/staff/Index.html
+++ b/HelpDesk/staff/templates/staff/Index.html
@@ -8,16 +8,70 @@
 <body>
     <h2>Đây là trang chủ</h2>
     <h4>Chào nhân viên {{ name }}</h4>
+    <input type="hidden" name="user" id="user" value="{{ user }}">
     <button onclick="ToURL('CreateProblem')">Tạo báo cáo cho sự cố</button>
     <button onclick="ToURL('logout')">Đăng xuất</button>
     
-    {% if report %}
-        <script>
-            alert("{{ report }}");
-        </script>
-    {% endif %}
+    <h3>Danh sách sự cố</h3>
+    <div id="problems"></div>
+
+    <h3>Danh sách FAQ</h3>
+    <div id="faqs"></div>
+
 </body>
+<script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
 <script>
+    var firebaseConfig = {
+        "apiKey": "AIzaSyC22V25o9VKeIPEAVFBfgvguv_C5dlWzn4",
+        "authDomain": "help-desk-12c4d.firebaseapp.com",
+        "databaseURL": "https://help-desk-12c4d.firebaseio.com",
+        "projectId": "help-desk-12c4d",
+        "storageBucket": "help-desk-12c4d.appspot.com",
+        "messagingSenderId": "137334382999",
+        "appId": "1:137334382999:web:73f716f1b85c76f1c724d2",
+        "measurementId": "G-R11CH76CNH"
+    }
+    firebase.initializeApp(firebaseConfig)
+
+    user = document.getElementById("user").value;
+    data_problem = firebase.database().ref("problems").orderByChild("user_create").equalTo(user);
+    data_problem.once("value", function(snapshot) {
+        problems = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>content</th>";
+                str += "<th>image</th>";
+                str += "<th>status</th>";
+            str += "</tr>";
+            for(x in problems) {
+                str += "<tr>";
+                    str += "<td>"+ problems[x].content +"</td>";
+                    str += "<td><img src='"+ problems[x].image_url +"' alt='"+ problems[x].image_name +"' style='height: 50px'</td>";
+                    str += "<td>"+ problems[x].status +"</td>";
+                str += "</tr>";
+            }
+        str += "</table>";
+        document.getElementById("problems").innerHTML = str;
+    });
+
+    var data_faq = firebase.database().ref("faqs");
+    data_faq.once("value", function(snapshot) {
+        faqs = snapshot.val();
+        str = "<table border='1'>";
+            str += "<tr>";
+                str += "<th>question</th>";
+                str += "<th>answer</th>";
+            str += "</tr>";
+            for(x in faqs) {
+                str += "<tr>";
+                    str += "<td>"+ faqs[x].question +"</td>";
+                    str += "<td>"+ faqs[x].answer +"</td>";
+                str += "</tr>";
+            }
+        str += "</table>";
+        document.getElementById("faqs").innerHTML = str;
+    });
+
     function ToURL(url) {
         window.location.href = url;
     }
