--- a/HelpDesk/staff/templates/technician/Index.html
+++ b/HelpDesk/staff/templates/technician/Index.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Đây là trang chủ</h2>
     <h4>Chào kỹ thuật viên {{ name }}</h4>
-    <button onclick="ToURL('../../logout')">Đăng xuất</button><br><br>
+    <button><a href="..{% url 'Logout' %}">Đăng xuất</a></button><br><br>
 
     <input type="hidden" name="user" id="user" value="{{ user }}">
     <input type="hidden" name="workKey" id="workKey" value="">
@@ -103,10 +103,6 @@
     function ChooseWork(key) {
         document.getElementById("workKey").value = key;
         document.getElementById("showWorkDetail").disabled = false;
-    }
-
-    function ToURL(url) {
-        window.location.href = url;
     }
 
     document.getElementById("showWorkDetail").onclick = function() {
